--- a/GroverAlgorithm.ipynb
+++ b/GroverAlgorithm.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulator = Aer.get_backend(\"statevector_simulator\")\n"
+    "simulator = Aer.get_backend(\"statevector_simulator\")"
    ]
   },
   {
